# facet-json

./: CHANGELOG.md  Cargo.toml  README.md
examples/: error_showcase.rs  showcase.rs
src/: deserialize.rs  lib.rs  serialize.rs  span.rs  tokenizer.rs
tests/: array_u64.rs  arrays.rs  bom.rs  bool.rs  borrow_test.rs  boxed.rs  bytes.rs  camino.rs  chrono.rs  datetime.rs  deny_unknown_and_default.rs  deserialize.rs  diagnostics.rs  enums.rs  eof_and_nulls.rs  escapes.rs  flatten_advanced.rs  hashmap.rs  map.rs  nonzero.rs  numbers.rs  option.rs  ordered-float.rs  pointer.rs  rename.rs  serialize.rs  set.rs  simple_array.rs  skip_unknown_fields.rs  structs.rs  tagged.rs  transparent.rs  tuple.rs  ulid.rs  uuid.rs  vec.rs
tests/snapshots/: deny_unknown_and_default__deny_unknown_fields.snap  deny_unknown_and_default__struct_with_missing_field.snap  diagnostics__error_at_end_of_long_input.snap  diagnostics__error_at_start_of_input.snap  diagnostics__error_with_unicode_content.snap  diagnostics__semantic_error_number_out_of_range.snap  diagnostics__semantic_error_trailing_data.snap  diagnostics__semantic_error_tuple_wrong_size.snap  diagnostics__semantic_error_type_mismatch.snap  diagnostics__semantic_error_unknown_field.snap  diagnostics__semantic_error_wrong_type_for_array.snap  diagnostics__syntax_error_multiline.snap  diagnostics__syntax_error_unexpected_brace.snap  diagnostics__syntax_error_unexpected_character.snap  diagnostics__syntax_error_with_context.snap  diagnostics__with_rich_diagnostics.snap  err__bad_json_1.snap  err__bad_json_2.snap  err__bad_json_3.snap  err__bad_json_4.snap  err__bad_json_6_string_as_number_subpath.snap  err__deserialize_0tup_from_1tup.snap  err__deserialize_tuple_empty_from_empty_nested.snap  err__deserialize_tuple_empty_nested_2x_from_1tup.snap  err__deserialize_tuple_empty_nested_2x_from_1tup_nested.snap  err__deserialize_tuple_empty_nested_2x_from_1tup_nested_2x.snap  err__deserialize_tuple_empty_nested_from_1tup.snap  err__deserialize_tuple_empty_nested_from_1tup_nested.snap  err__deserialize_tuple_empty_nested_from_empty_nested_2x.snap  err__deserialize_tuple_empty_nested_from_empty_nested_3x.snap  err__deserialize_tuple_wrong_size_one_too_many.snap  err__long_input_after_error.snap  err__long_input_before_error.snap  err__unknown_field_with_rename.snap  nonzero__read_nonzero_zero.snap  tenant_config__tenantconfig_wrong_free.snap  vec__vec_of_structs_missing_field.snap
