[package]
name = "facet-json"
version = "0.31.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.87.0"
repository = "https://github.com/facet-rs/facet-json"
description = "A JSON deserializer and serializer for the facet ecosystem"
keywords = ["json", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parser-implementations"]

[features]
std = ["alloc", "facet-core/std", "facet-reflect/std"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]
default = ["std"]

[dependencies]
facet-core = { path = "../facet/facet-core", default-features = false }
facet-reflect = { path = "../facet/facet-reflect", default-features = false }
facet-solver = { path = "../facet/facet-solver" }

miette = { version = "7", features = ["fancy", "syntect-highlighter"] }
strsim = "0.11"
itoa = "1.0.15"
lexical-parse-float = "1.0.5"
lexical-parse-integer = "1.0.5"
log = "0.4.27"
ryu = "1"

[dev-dependencies]
bytes = { version = "1.10.1" }
camino = { version = "1" }
facet = { path = "../facet/facet", features = [
    "bytes",
    "camino",
    "time",
    "chrono",
    "ulid",
    "uuid",
    "jiff02",
    "ordered-float",
] }
facet-pretty = { path = "../facet-pretty" }
facet-testhelpers = { path = "../facet/facet-testhelpers" }
insta = "1.43.1"
syntect = "5.3"
time = { version = "0.3.41", features = ["macros"] }
chrono = { version = "0.4", default-features = false }
ulid = { version = "1.2.1" }
uuid = { version = "1.17.0" }
jiff = "0.2.15"
ordered-float = "5.0.0"
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
owo-colors = "4"
boxen = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"jiff\"))"] }
